app/Python/syntax_error_correction/log.txt
<<<<<<< HEAD
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:4:42: error: expected ‘,’ or ‘;’ before ‘constexpr’
    4 | bool include [ ] = { 0 , 0 , 0 , 0 , 0 } constexpr int W = 13 ;
      |                                          ^~~~~~~~~
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp: In function ‘bool promising(int, int, int)’:
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:5:82: error: ‘W’ was not declared in this scope
    5 | bool promising ( int i , int weight , int total ) { return ( ( weight + total >= W ) && ( ( weight == W ) || ( weight + w [ i ] <= W ) ) ) ;
      |                                                                                  ^
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:5:121: error: ‘w’ was not declared in this scope
    5 | bool promising ( int i , int weight , int total ) { return ( ( weight + total >= W ) && ( ( weight == W ) || ( weight + w [ i ] <= W ) ) ) ;
      |                                                                                                                         ^
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp: In function ‘void sumOfSubsets(int, int, int)’:
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:6:113: error: ‘W’ was not declared in this scope
    6 | } void sumOfSubsets ( int i , int weight , int total ) { if ( promising ( i , weight , total ) ) if ( weight == W ) { for ( int x = 0 ;
      |                                                                                                                 ^
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:3:14: error: expected ‘;’ before ‘int’
    3 | # define n 5 int w [ ] = { 3 , 4 , 5 , 2 , 6 } ;
      |              ^~~
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:7:5: note: in expansion of macro ‘n’
    7 | x < n ;
      |     ^
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:3:14: error: expected primary-expression before ‘int’
    3 | # define n 5 int w [ ] = { 3 , 4 , 5 , 2 , 6 } ;
      |              ^~~
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:7:5: note: in expansion of macro ‘n’
    7 | x < n ;
      |     ^
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:3:14: error: expected ‘)’ before ‘int’
    3 | # define n 5 int w [ ] = { 3 , 4 , 5 , 2 , 6 } ;
      |              ^~~
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:7:5: note: in expansion of macro ‘n’
    7 | x < n ;
      |     ^
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:6:123: note: to match this ‘(’
    6 | } void sumOfSubsets ( int i , int weight , int total ) { if ( promising ( i , weight , total ) ) if ( weight == W ) { for ( int x = 0 ;
      |                                                                                                                           ^
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:8:1: error: ‘x’ was not declared in this scope
    8 | x ++ ) cout << include [ x ] << " " ;
      | ^
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:11:34: error: ‘w’ was not declared in this scope
   11 |  sumOfSubsets ( i + 1 , weight + w [ i ] , total - w [ i ] ) ;
      |                                  ^
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp: At global scope:
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:16:15: error: expected initializer before ‘int’
   16 |  int main ( ) int total = 0 ;
      |               ^~~
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:17:2: error: expected unqualified-id before ‘for’
   17 |  for ( int i = 0 ;
      |  ^~~
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:18:2: error: ‘i’ does not name a type
   18 |  i < n ;
      |  ^
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:19:2: error: ‘i’ does not name a type
   19 |  i ++ ) total += w [ i ] ;
      |  ^
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:20:15: error: expected constructor, destructor, or type conversion before ‘(’ token
   20 |  sumOfSubsets ( 0 , 0 , total ) ;
      |               ^
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:21:2: error: expected unqualified-id before ‘return’
   21 |  return 0 ;
      |  ^~~~~~
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:22:2: error: expected declaration before ‘}’ token
   22 |  }
      |  ^
=======
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:5:1: warning: missing terminating " character
 " include [ ] = { 0 , 0 , 0 , 0 , 0 } ; 
 ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:5:1: error: missing terminating " character
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp: In function 'void sumOfSubsets(int, int, int)':
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:10:16: error: 'include' was not declared in this scope
 x ++ ) cout << include [ x ] << " " ;
                ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:12:9: error: 'include' was not declared in this scope
  else { include [ i ] = true ;
         ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp: At global scope:
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:17:15: error: expected initializer before 'int'
  int main ( ) int total = 0 ;
               ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:18:2: error: expected unqualified-id before 'for'
  for ( int i = 0 ;
  ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:19:2: error: 'i' does not name a type
  i < n ;
  ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:20:2: error: 'i' does not name a type
  i ++ ) total += w [ i ] ;
  ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:21:15: error: expected constructor, destructor, or type conversion before '(' token
  sumOfSubsets ( 0 , 0 , total ) ;
               ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:22:2: error: expected unqualified-id before 'return'
  return 0 ;
  ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:23:2: error: expected declaration before '}' token
  }
  ^
>>>>>>> 0d7ea14d44f8e95003591293d712cfe383ca6ca0
